# ChangeLog for dev-python/AuthKit
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*AuthKit-0.4.5 (23 Jun 2012)

  23 Jun 2012; <alunduil@gentoo.org> +AuthKit-0.4.5.ebuild:
  Adding AuthKit.
