@@ -1,4 +1,4 @@
 DIST AuthKit-0.4.5.tar.gz 114474 RMD160 b0e4486a1b0a9968dd017155f7de20734d414f85 SHA1 3299ef0bde0fe51fec0fcaa5577eacec5e2eddca SHA256 e96590a5b4cecd8d3d872aabee2dfafb3f9b5b712ab040df110f761a71c93d4e
-EBUILD AuthKit-0.4.5.ebuild 450 RMD160 376f77072fda272a31d6c5175035fcd0a6a675f6 SHA1 f186ba8007282d74341ab912e0ae8629a5c925c1 SHA256 cd6b966fc62270b6cbad34d1214c721127098e3ab4e916ac228003207581e72a
-MISC ChangeLog 228 RMD160 be5a61f21faa9612d021ae6d7c9e9e5026bda2ff SHA1 99c344f8a30336da2e984aea51650e8b6b017837 SHA256 bb95f276fa118939259da58ce3a0b0b55a38f4cb1c10f620dfa1e887e9a2c6d7
+EBUILD AuthKit-0.4.5.ebuild 512 RMD160 6a742a1bf191ef861a1313dea0531b25b3bd9786 SHA1 93362b4dc49d69106b633698252a38e8e6b341e5 SHA256 a1964677dc98a695251004be42b6c0b64b94757095f4bffef9d4421f4946d8ef
+MISC ChangeLog 325 RMD160 9e40be5a7ec11197812efda50ecf0169403aa673 SHA1 a8af627b9489577bf9b121d4a04285a32edbaa0b SHA256 24ab55cbfceeb2ba3d7b7f4658fd2049fe6773220f92e76e4aa7ffe8f0e26247
 MISC metadata.xml 189 RMD160 fd3773a56ff5b04e7e606f475c397ffd9eb74023 SHA1 f2d55791c0ab9d7f87737430c465e1932ea78107 SHA256 3c34d13913d23a2d7669fe1e294b7a026e204eff7c701461646f4d7db25d9d0c
