@@ -2,6 +2,9 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Jun 2012; <alunduil@gentoo.org> AuthKit-0.4.5.ebuild:
+  Adding elementtree dep to AuthKit.
+
 *AuthKit-0.4.5 (23 Jun 2012)
 
   23 Jun 2012; <alunduil@gentoo.org> +AuthKit-0.4.5.ebuild:
